<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:drawableTop="@drawable/logo"
        android:drawablePadding="30dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_image"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@color/gray_btn"
        android:drawableStart="@drawable/btn_image"
        android:drawablePadding="16dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="40dp"
        android:text="@string/title_image"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btn_object"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_btn"
        android:drawableStart="@drawable/btn_object"
        android:drawablePadding="16dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="40dp"
        android:text="@string/title_object"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_image" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_btn"
        android:drawableStart="@drawable/btn_code"
        android:drawablePadding="16dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="40dp"
        android:text="@string/title_source"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_object" />

    <Button
        android:id="@+id/btn_advice"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_btn"
        android:drawableStart="@drawable/btn_help"
        android:drawablePadding="16dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="40dp"
        android:text="@string/title_help"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contact" />


</androidx.constraintlayout.widget.ConstraintLayout>