<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.MindSpore.FullscreenContainer"
    tools:context=".ui.experience.ExperienceFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/experience_head"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/experience_head_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/experience_head_subtitle"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_head_experience"
            android:text="@string/experience_head_button"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:tabBackground="@color/transparent"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="false"
        app:tabMaxWidth="0dp"
        app:tabIndicatorHeight="2dp"
        app:tabIndicator="@color/black"
        app:tabRippleColor="@color/transparent"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/main_tab_text_checked"
        app:tabTextColor="@color/black">
    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff2f4f5" />

</LinearLayout>